js/src/tests/test262/built-ins/Error/prototype/name/prop-desc.js
verifyProperty
(
Error
.
prototype
'
name
'
{
enumerable
:
false
writable
:
true
configurable
:
true
value
:
'
Error
'
}
)
;
reportCompare
(
0
0
)
;
